<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Blanks"
        tools:context="com.example.test.Music.ActivityLoadMusic">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextPathMusic" android:hint="@string/filesPathToFolder" android:textSize="24sp"
                android:textAlignment="center"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/listViewFileInFolder">
        </ListView>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
            <Button
                    android:text="@string/filesButtonLoadAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/buttonLoadFilesCheckAll"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/fileButtonLoadOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/buttonLoadMusic"
                    android:textAlignment="center"
                    android:textSize="18sp" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
