<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:theme="@style/Blanks"
             tools:context="com.example.test.Fragment.MusicFragment"
             android:id="@+id/frameLayoutBlank1">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:id="@+id/LinearLayoutMusicLV" android:layout_marginBottom="90dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" android:layout_marginTop="10dp">
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/ListViewMusic" android:layout_weight="0">
            </ListView>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:text="@string/musicFragmentTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/TextViewMusic" android:layout_weight="1"
                    android:textSize="18sp" android:textAlignment="center"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/SeekBarMusic" android:layout_weight="1"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1">
                <Button android:layout_width="50dp" android:layout_height="wrap_content"
                        android:id="@+id/FragBl1_LoadMusic" android:layout_weight="0"
                        android:textAlignment="center" android:textSize="14sp" android:textStyle="bold"
                        android:text="+" android:backgroundTint="@android:color/black"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ButtonPrevMusic"
                        android:layout_weight="0"
                        android:text="@string/musicButtonPrev" android:backgroundTint="@android:color/black"/>
                <Button
                        android:text="@string/musicButtonPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ButtonPlayMusic"
                        android:layout_weight="1" android:backgroundTint="@android:color/black"/>
                <Button
                        android:text="@string/musicButtonNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ButtonNextMusic"
                        android:layout_weight="0" android:backgroundTint="@android:color/black"/>
                <Button android:layout_width="50dp" android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textAlignment="center" android:textSize="14sp" android:textStyle="bold"
                        android:backgroundTint="@android:color/black" android:text="-"
                        android:id="@+id/ButtonDropMusicDB"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
